<resources>
    <string name="app_name">ModernPopUp</string>
    <string name="show_pop_up">Show Pop Up</string>
    <string name="close_symbol">X</string>
    <string name="profile_name">Ariel Noah</string>
    <string name="user_address">Bandung, Indonesia</string>
    <string name="followers_total">1000</string>
    <string name="following_total">100</string>
    <string name="following">Following</string>
    <string name="post_total">140</string>
    <string name="post">Post</string>
    <string name="follow_me">Follow Me</string>
</resources>
