<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="470dp"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/txt_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/circle_close"
        android:gravity="center"
        android:text="@string/close_symbol"
        android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/profile_name"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/user_address"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/colorIndianRed"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers_total"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Followers"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/colorCoral"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following_total"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/colorSteelBlue"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_total"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/follow_me"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style"/>

</LinearLayout>